[package]
name = "discordstore"
version = "1.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
serenity = "0.12.4"
tokio = { version = "1.43.0", features = ["full"] }
dotenvy = "0.15"
reqwest = "0.12.12"
text_io = "0.1.12"
uuid = { version = "1.15.1", features = ["v4"]}

[profile.release]
opt-level = "z"       
codegen-units = 1   
lto = true        
panic = "abort"     
debug = false       
strip = true        
overflow-checks = false