[package]
name = "discordstore"
version = "2.0.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
serenity = "0.12.4"
tokio = { version = "1.44", features = ["full"] }
dotenvy = "0.15"
reqwest = "0.12.12"
uuid = { version = "1.15.1", features = ["v4"] }
poise = {version="0.6.1"}
tracing-subscriber = "0.3"
directories = "6.0.0"
toml = "0.8.20"
serde = { version = "1.0", features = ["derive"] }
dialoguer = "0.11.0"
colored = "3.0.0"

[profile.release]
opt-level = "z"       
codegen-units = 1   
lto = true        
panic = "abort"     
debug = false       
strip = true        
overflow-checks = false
